--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Brian Feeney
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Blogging
+title: Blog
 email: bcfeeney@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Just a blog
